--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 },
 "url": "https://celestialpaints.ca",
 "telephone": "+1-647-853-1757",
-"email": "info@celestialpaints.ca",
+"email": "celestial.painting.inc@gmail.com",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
@@ -1017,7 +1017,7 @@ Founded in 2010, Celestial Painting Inc. has been transforming homes and busines
 </div>
 </div>
 </div>
-<input type="hidden" name="_replyto" value="im366971@gmail.com">
+<input type="hidden" name="_replyto" value="celestial.painting.inc@gmail.com">
 <input type="hidden" name="_subject" value="New Consultation Request - Celestial Painting">
 <input type="hidden" name="form_type" value="consultation_scheduling">
 <div class="flex flex-col sm:flex-row gap-4 pt-6">
@@ -1065,7 +1065,7 @@ Cancel
 <span id="charCount">0</span>/500 characters
 </div>
 </div>
-<input type="hidden" name="_replyto" value="im366971@gmail.com">
+<input type="hidden" name="_replyto" value="celestial.painting.inc@gmail.com">
 <input type="hidden" name="_subject" value="New Quote Request - Celestial Painting">
 <input type="hidden" name="_next" value="thank-you.html">
 <button type="submit" id="submitBtn" class="w-full bg-secondary hover:bg-yellow-600 text-white py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
@@ -1093,7 +1093,7 @@ Cancel
 </div>
 <div>
 <div class="font-medium text-gray-800">Email</div>
-<div class="text-gray-600">info@celestialpaints.ca</div>
+<div class="text-gray-600">celestial.painting.inc@gmail.com</div>
 </div>
 </div>
 <div class="flex items-start space-x-4">
@@ -1167,7 +1167,7 @@ Sunday: Closed
 <h4 class="font-bold mb-4">Contact Info</h4>
 <div class="space-y-2 text-blue-100">
 <div>647 853 1757</div>
-<div>info@celestialpaints.ca</div>
+<div>celestial.painting.inc@gmail.com</div>
 <div class="text-sm">Licensed & Insured</div>
 <div class="text-sm">License #123456</div>
 </div>
