--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@ Sunday: Closed
 
 <div class="text-sm">Licensed & Insured</div>
 
-<div class="text-sm">License #123456</div>
+<div class="text-sm">License #</div>
 
 </div>
 
