--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 },
 "url": "https://celestialpaints.ca",
 "telephone": "+1-647-853-1757",
-"email": "celestial.painting.inc@gmail.com",
+"email": "celestial.painting.inc@gmail.com", leo@celestialpaints.ca
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
@@ -1014,7 +1014,7 @@ Founded in 2010, Celestial Painting Inc. has been transforming homes and busines
 </div>
 </div>
 </div>
-<input type="hidden" name="_replyto" value="celestial.painting.inc@gmail.com">
+<input type="hidden" name="_replyto" value="leo@celestialpaints.ca">
 <input type="hidden" name="_subject" value="New Consultation Request - Celestial Painting">
 <input type="hidden" name="form_type" value="consultation_scheduling">
 <div class="flex flex-col sm:flex-row gap-4 pt-6">
@@ -1062,7 +1062,7 @@ Cancel
 <span id="charCount">0</span>/500 characters
 </div>
 </div>
-<input type="hidden" name="_replyto" value="celestial.painting.inc@gmail.com">
+<input type="hidden" name="_replyto" value="leo@celestialpaints.ca">
 <input type="hidden" name="_subject" value="New Quote Request - Celestial Painting">
 <input type="hidden" name="_next" value="thank-you.html">
 <button type="submit" id="submitBtn" class="w-full bg-secondary hover:bg-yellow-600 text-white py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
@@ -1091,6 +1091,7 @@ Cancel
 <div>
 <div class="font-medium text-gray-800">Email</div>
 <div class="text-gray-600">celestial.painting.inc@gmail.com</div>
+  <div class="text-gray-600">leo@celestialpaints.ca</div>
 </div>
 </div>
 <div class="flex items-start space-x-4">
@@ -1165,6 +1166,7 @@ Sunday: Closed
 <div class="space-y-2 text-blue-100">
 <div>647 853 1757</div>
 <div>celestial.painting.inc@gmail.com</div>
+  <div>leo@celestialpaints.ca</div>
 <div class="text-sm">Licensed & Insured</div>
 </div>
 </div>
