--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ Follow Us on Instagram
 </div>
 <div class="portfolio-item residential bg-white rounded-xl shadow-lg overflow-hidden hover:shadow-xl transition-all duration-300 hover:-translate-y-1 group">
 <div class="relative overflow-hidden">
-<img src="https://static.readdy.ai/image/4aa709d1071c745a0f95e84e800a02b5/600119008684f95f42e1302f023e6284.jfif" alt="Bathroom Renovation" class="w-full h-48 object-cover object-top group-hover:scale-105 transition-transform duration-300">
+<img src="https://static.readdy.ai/image/4aa709d1071c745a0f95e84e800a02b5/600119008684f95f42e1302f023e6284.jfif" alt="Exteroir Renovation" class="w-full h-48 object-cover object-top group-hover:scale-105 transition-transform duration-300">
 <div class="absolute inset-0 bg-gradient-to-t from-black/50 to-transparent opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
 <div class="absolute bottom-4 left-4 right-4 text-white opacity-0 group-hover:opacity-100 transition-opacity duration-300">
 <h4 class="font-semibold mb-1">Bathroom Refresh</h4>
