--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 },
 "url": "https://celestialpaints.ca",
 "telephone": "+1-647-853-1757",
-"email": "celestial.painting.inc@gmail.com", leo@celestialpaints.ca
+"email": "celestial.painting.inc@gmail.com",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
@@ -1091,7 +1091,6 @@ Cancel
 <div>
 <div class="font-medium text-gray-800">Email</div>
 <div class="text-gray-600">celestial.painting.inc@gmail.com</div>
-  <div class="text-gray-600">leo@celestialpaints.ca</div>
 </div>
 </div>
 <div class="flex items-start space-x-4">
@@ -1166,7 +1165,6 @@ Sunday: Closed
 <div class="space-y-2 text-blue-100">
 <div>647 853 1757</div>
 <div>celestial.painting.inc@gmail.com</div>
-  <div>leo@celestialpaints.ca</div>
 <div class="text-sm">Licensed & Insured</div>
 </div>
 </div>
