--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@ Founded in 2010, Celestial Painting Inc. has been transforming homes and busines
 </div>
 </div>
 </div>
-<input type="hidden" name="_replyto" value="72688268irfan@gmail.com">
+<input type="hidden" name="_replyto" value="#">
 <input type="hidden" name="_subject" value="New Consultation Request - Celestial Painting">
 <input type="hidden" name="form_type" value="consultation_scheduling">
 <div class="flex flex-col sm:flex-row gap-4 pt-6">
@@ -1062,7 +1062,7 @@ Cancel
 <span id="charCount">0</span>/500 characters
 </div>
 </div>
-<input type="hidden" name="_replyto" value="72688268irfan@gmail.com">
+<input type="hidden" name="_replyto" value="#">
 <input type="hidden" name="_subject" value="New Quote Request - Celestial Painting">
 <input type="hidden" name="_next" value="thank-you.html">
 <button type="submit" id="submitBtn" class="w-full bg-secondary hover:bg-yellow-600 text-white py-3 !rounded-button font-medium transition-colors whitespace-nowrap">
